# tcsv

./: .gitignore  Readme.md  city_sample.csv  css.c  css.h  doc.md  en-jp.csv  example.csv  main.c  menu.ui  meson.build  sample.csv  tcsv.c  tcsv.gresource.xml  tcsv.h  tcsv_object.csv  tcsvalert.c  tcsvalert.h  tcsvalert.ui  tcsvapplication.c  tcsvapplication.h  tcsvflddialog.c  tcsvflddialog.h  tcsvflddialog.ui  tcsvmoddialog.c  tcsvmoddialog.h  tcsvmoddialog.ui  tcsvnewdialog.c  tcsvnewdialog.h  tcsvnewdialog.ui  tcsvpref.c  tcsvpref.h  tcsvpref.ui  tcsvrecdialog.c  tcsvrecdialog.h  tcsvrecdialog.ui  tcsvstr.c  tcsvstr.h  tcsvstringlist.c  tcsvstringlist.h  (+7 more)
csv_with_glib/: csv.c  csv.h  doc.md
csv_with_glib/test/: meson.build  test_csv.c
csv_without_glib/: csv.c  csv.h  doc.md
csv_without_glib/test/: meson.build  test_csv.c
test/: com.github.ToshioCP.tcsv.gschema.xml  meson.build  sample1.csv  sample2.csv  sample3.csv  test_tcsv.c  test_tcsvmoddialog.c  test_tcsvrecdialog.c  test_tcsvwindow.c  test_tmodify.c  test_tstr.c
